--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -3,11 +3,32 @@ on:
   push:
     branches: [ master, main ]
   workflow_call:
+    inputs:
+      testDir:
+        required: true
+        type: string
+        default: "./test"
+      srcDir:
+        required: true
+        type: string
+        default: "./src/APIs/"
+      version:
+        required: false
+        type: string
+        default: "3.8"
 jobs:
   node-js-workflow:
+    env:
+      SRC_DIR: ${{inputs.srcDir}}
+      TEST_DIR: ${{inputs.testDir}}
+      PYTHON_VERSION: ${{inputs.version}}
+    
     runs-on: ubuntu-latest
     name: composite actions
     steps:
       - name: Install packages, build, test
         uses: vignesh1424/python-ci-workflow@main
-        
+        with:
+          srcDir: ${{ env.SRC_DIR }}
+          testDir:  ${{ env.TEST_DIR }}
+          version: ${{ env.PYTHON_VERSION }}
