--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -1,13 +1,17 @@
 name: composite Actions Example
 on:
-  pull_request:
-    types: [closed]
-    branches: [main, master]
-
+  push:
+    branches: [ master, main ]
 jobs:
-  ApplicantApi:
-        uses: vignesh1424/python-Github-actions-workflow/.github/workflows/reusable-workflow.yml@main
+  node-js-workflow:
+
+    
+    runs-on: ubuntu-latest
+    name: composite actions
+    steps:
+      - name: Install packages, build, test
+        uses: vignesh1424/python-ci-workflow@main
         with:
           srcDir: "./src/APIs/"
           testDir: "./test"
-          version: "3.8"
+          version: "3.9"
