--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -10,8 +10,11 @@ jobs:
     name: composite actions
     steps:
       - name: Install packages, build, test
+        run: |
+          pwd
+          ls -ltr
         uses: vignesh1424/python-ci-workflow@main
         with:
-          srcDir: "src"
+          srcDir: "src/APIs/"
           testDir: "./test"
           version: "3.9"
