--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Install packages, build, test
         uses: vignesh1424/python-ci-workflow@main
         with:
-          srcDir: "src/APIs/"
-          testDir: "tests"
+          srcDir: "./src/APIs/"
+          testDir: "./tests"
           version: "3.9"
           codeCoverage: "true"
